--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Output file contents and it's md5 hash value in JSON format.",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha -R spec ./test/*.js",
     "gulp": "gulp"
   },
   "pre-commit": [
@@ -27,9 +27,13 @@
   "author": "Vast",
   "license": "MIT",
   "devDependencies": {
+    "assert": "^1.3.0",
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-jscs": "^3.0.2",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "mocha": "^2.4.5",
+    "vinyl": "^1.1.1"
   },
   "dependencies": {
     "gulp-util": "^3.0.7",
