--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "gulp-file-to-json",
   "version": "1.0.0",
-  "description": "Output file contents and it's md5 hash value in JSON format.",
+  "description": "Outputs file contents and MD5 hash value in JSON format with Gulp.",
   "main": "index.js",
   "scripts": {
     "test": "mocha -R spec ./test/*.js",
-    "jscs": "gulp jscs"
+    "jshint": "jshint index.js",
+    "jscs": "jscs index.js"
   },
   "pre-commit": [
-    "jscs",
-    "test"
+    "test",
+    "jshint",
+    "jscs"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/vast-engineering/gulp-file-to-json"
+    "url": "https://github.com/vast-engineering/gulp-file-to-json.git"
   },
   "keywords": [
     "gulp",
     "gulpplugin",
     "css",
-    "styles",
-    "stylesheet",
     "fonts",
     "json",
     "localstorage"
@@ -31,8 +31,9 @@
     "assert": "^1.3.0",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
-    "gulp-jscs": "^3.0.2",
     "gulp-rename": "^1.2.2",
+    "jscs": "^2.11.0",
+    "jshint": "^2.9.1",
     "mocha": "^2.4.5",
     "pre-commit": "^1.1.2",
     "vinyl": "^1.1.1"
